# ml-project-adaai_VK_predict_hackathon

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
EDA/: EDA.ipynb  feature_importance_by_corr.csv  feature_importance_by_lgb.csv  leakage_from_train.csv
blends/: blends_results.md  do_blends.ipynb  strong_model_zoo_best_dataset_v3.ipynb  submissions_results.md
code/: plot_feature_distributions.py
distribution_plots/: feature_distribution_summary.csv  suspicious_features.csv
modeling/: catboost_optuna.ipynb  cnn_optuna.ipynb  flaml_automl_full_train.ipynb  flaml_automl_optuna.ipynb  huge_flaml_automl_optuna.ipynb  lgbm_optuna.ipynb  micro_flaml_automl_optuna.ipynb  random_forest_optuna.ipynb  rnn_optuna.ipynb  tabm_optuna.ipynb
notebooks/: bagging.ipynb  baseline.ipynb  baseline_ars.ipynb  catboost_auc_best.cbm  catboost_best_model.cbm  eda.ipynb  feature_space_lab_v2_max_pipeline.ipynb  feature_space_select_best_v3.ipynb  fix_features.ipynb  polynomial_engineered_features.ipynb  prepare_feature_sets_pipeline.ipynb  strong_models_on_v2_features.ipynb
presentation/: vk hackathon-2.pptx  vk hackathon.pptx  vk_predict_cmc.pptx  vk_predict_cmc_hse.pptx  vk_predict_cmc_hse_2.pptx  vk_predict_cmc_speech_text.docx
src/: proccess_data.py
submissions/: flaml_all_train_fields_0.66582.csv  flaml_top500_clean_0.66212.csv  flaml_top500_magic_meta_0.66377.csv  rnn_top300_0.62366.csv  submission_blend_probability_equal.csv  submission_blend_rank_equal.csv  submission_hist_gradient_boosting.csv  submission_lightgbm_gradient_boosting.csv  (+4 more)
(+83 files in other folders)
