# pyproject.toml
[project]
name = "predict-hackathon"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pandas>=2.2",
    "polars>=1.0",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "hydra-core>=1.3",
    "mlflow>=2.15",
    "dvc[s3,gdrive]>=3.50",
    "pandera>=0.20",
    "pydantic>=2.9",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "joblib>=1.4",
    "numpy>=1.26",
    "kagglehub>=1.0.0",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "pytest>=8.2",
    "ipywidgets>=8.1.8",
]

